<resources>
    <string name="app_name">Roommate</string>
    <string name="abrir_otra_interfax">Interfax</string>
    <string name="title_activity_receptor">ReceptorActivity</string>
    <string name="abrir_bateria">Bateria</string>
    <string name="abrir_interfax">Interfax</string>
    <string name="abrir_item1">Registrarse</string>
    <string name="digite_el_correo">Correo Electrónico</string>
    <string name="digite_la_contraseña">Contraseña</string>
    <string name="agregar_nombre">Nombre de Usuario</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="nombre_de_aplicacion">Roommate</string>
    <string name="digite_la_contraseña1">Confirmar contraseña</string>
    <string name="lista">Lista</string>
    <string name="mapa">Mapa</string>
    <string name="perfil">Perfil</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="favoritos">Favoritos</string>

    <string name="especificacion">Tipo de arriendo</string>
    <string name="precio">Precio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_msg_register">The email address is already in use by another account.</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_msg_login_for_register">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_msg_for_incorrect_password">The password is invalid or the user does not have a password.</string>
    <string name="descrpcion">Descripción...</string>
    <string name="arrienda">¿Qué se arrienda?</string>
    <string name="chat">Chat</string>

</resources>
