<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceptorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            app:srcCompat="@android:color/transparent" />

        <TextView
            android:id="@+id/tv_resgistro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=" REGISTRO"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agregar_nombre"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/digite_el_correo"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_la_contraseña"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Regristrar" />

    </LinearLayout>


    <include layout="@layout/content_receptor" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>